# news-homepages

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  MANIFEST.in  Makefile  Pipfile  README.md  SECURITY.md  latest.csv  latimes.wayback.json  mypy.ini  package-lock.json  package.json  pyproject.toml  pytest.ini  setup.cfg  setup.py  shoot.py  sources.csv
.github/ISSUE_TEMPLATE/: add-a-site.md  report-a-broken-site.md
.github/workflows/: accessibility-report.yml  analyze.yml  archive-ajc.yml  archive-all-batch-1.yml  archive-all-batch-10.yml  archive-all-batch-2.yml  archive-all-batch-3.yml  archive-all-batch-4.yml  archive-all-batch-5.yml  archive-all-batch-6.yml  archive-all-batch-7.yml  archive-all-batch-8.yml  archive-all-batch-9.yml  archive-all.yml  archive-baltimoresun.yml  archive-bay-area.yml  archive-brazil.yml  archive-bundle.yml  archive-canada.yml  archive-chicago.yml  archive-country.yml  archive-france.yml  archive-globeandmail.yml  archive-iowa.yml  archive-israel.yml  archive-japan.yml  archive-latimes.yaml  archive-maryland.yaml  archive-new-york-city.yml  archive-north-carolina.yml  archive-philadelphia.yml  archive-russia.yml  archive-scotland.yml  archive-single-site-workflow.yml  archive-single-site.yml  archive-socal.yml  archive-tech.yml  archive-texas.yml  archive-uk-national.yml  archive-uk.yml  (+35 more)
_site/: accessibility.md  bundles.md  conf.py  drudge.md  extracts.md  gettingstarted.md  index.md  latest.md  openai-gptbot-robotstxt.md  performance.md  reference.rst  requirements.txt  slack.md  sources.md  status-report.md
_site/_templates/: accessibility.md.tmpl  bundle.rss.tmpl  bundle_detail.md.tmpl  bundles.md.tmpl  countries.md.tmpl  country.rss.tmpl  country_detail.md.tmpl  drudge-top-words.svg.tmpl  drudge.md.tmpl  language_detail.md.tmpl  languages.md.tmpl  latest.md.tmpl  nav.html  openai-gptbot-robotstxt.md.tmpl  performance.md.tmpl  site.rss.tmpl  site_detail.md.tmpl  site_detail_body.md.tmpl  sites.opml.tmpl  sources.md.tmpl  status-report.md.tmpl
docs/: accessibility.md  adding.md  bundles.md  conf.py  contributing.md  countries.md  drudge.md  extracts.md  gettingstarted.md  index.md  languages.md  latest.md  performance.md  reference.rst  requirements.txt  slack.md  sources.md  usage.md
docs/_templates/: accessibility.md.tmpl  all.rss.tmpl  bundle_detail.md.tmpl  bundles.md.tmpl  countries.md.tmpl  country_detail.md.tmpl  drudge.md.tmpl  languages.md.tmpl  latest.md.tmpl  performance.md.tmpl  site.rss.tmpl  site_detail.md.tmpl  sites.opml.tmpl  sources.md.tmpl
docs/bundles/: alabama.md  alaska.md  argentina.md  arizona.md  arkansas.md  aviation.md  bay-area.md  brazil.md  california.md  canada.md  capitol-hill.md  chess.md  chicago.md  colorado.md  connecticut.md  delaware.md  eastern-europe.md  entertainment.md  feminist.md  florida.md  france.md  gannett.md  georgia.md  germany.md  hawaii.md  illinois.md  india.md  indiana.md  iowa.md  ireland.md  italy.md  japan.md  kansas.md  kentucky.md  las-vegas.md  louisiana.md  maine.md  maryland.md  massachusetts.md  mexico.md  (+46 more)
docs/countries/: ar.md  at.md  au.md  ba.md  be.md  br.md  ca.md  co.md  de.md  es.md  fr.md  gb.md  ge.md  ie.md  il.md  in.md  it.md  jp.md  lb.md  lv.md  mx.md  no.md  np.md  nz.md  qa.md  ru.md  sv.md  tw.md  ua.md  us.md  uy.md  za.md
docs/languages/: af.md  de.md  en.md  es.md  fr.md  he.md  hi.md  it.md  ja.md  ne.md  no.md  pt.md  ru.md  uk.md  xh.md  zh.md  zu.md
docs/sites/: 100reporters.md  11alivenews.md  12khari.md  12newsnow.md  13wmaznews.md  14eastmag.md  19thnews.md  1newsnz.md  20minutes.md  3newsnowomaha.md  41nbc.md  6abc.md  9news.md  9to5mac.md  _fiquemsabendo.md  abc.md  abc15.md  abc3340.md  abc7.md  abc7breaking.md  abc7newsbayarea.md  abc_es.md  abcnews.md  aberdeennews.md  abqbizfirst.md  abqjournal.md  adndotcom.md  adnkronos.md  aftenposten.md  agenciabrasil.md  agenciapublica.md  ainonline.md  airlinereporter.md  airwaysmagazine.md  ajc.md  ajenglish.md  aknewsnow.md  akpublicnews.md  alamogordonews.md  albany_herald.md  (+1073 more)
extracts/csv/: accessibility-files.csv  accessibility-files.csv.REMOVED.git-id  bundles.csv  drudge-entities-analysis.csv  drudge-hyperlinks-analysis.csv  hyperlink-files.csv  hyperlink-files.csv.REMOVED.git-id  items.csv  latest-files.csv  sites.csv  (+10 more)
newshomepages/: accessibility.py  adstxt.py  altair_theme.py  analyze.py  archive.py  batch.py  browser_utils.py  discorder.py  docs.py  extract.py  foo.py  html.py  hyperlinks.py  mosaic.py  robotstxt.py  rss.py  save_html.py  screenshot.js  screenshot.py  shoot.py  site.py  slack.py  telegrammer.py  toot.py  tweet.py  utils.py  wayback.py
notebooks/: analyze-drudge.ipynb  analyze-lighthouse.ipynb  cnn-hyperlink-counts.csv  drudge-entities.ipynb  drudge-entity-counts.csv  drudge-hyperlink-counts.csv  drudge-hyperlinks-storysniffer-guesses.csv  drudge-hyperlinks-storysniffer-tweaks.csv  drudge-stories.csv  get-hyperlinks.ipynb  nytimes-hyperlink-counts.csv  site-screenshots.ipynb  sites_by_date.csv  status-report.ipynb  status-report.json  totals.ipynb
tests/: test_accessibility.py  test_archive.py  test_extract.py  test_html.py  test_hyperlinks.py  test_robotstxt.py  test_screenshot.py  test_shoot.py  test_utils.py  test_wayback.py
(+8954 files in other folders)
